--- a/templates/classify.html
+++ b/templates/classify.html
@@ -54,7 +54,7 @@
                         </h2>
             
                         <h2 style="font-size: 2rem">
-                          Pourcentage de confience : <span style="font-weight: bold; color:rgb(37, 36, 36);">{{prob}}%</span>
+                          Pourcentage de précesion : <span style="font-weight: bold; color:rgb(37, 36, 36);">{{prob}}%</span>
                         </h2>
                         <br>
                         <a href="/" class="button is-black is-inverted is-outlined" style="font-size:1.5rem">Accueil</a>
